--- a/01.UI/Aghsat.UI/Aghsat.UI.csproj
+++ b/01.UI/Aghsat.UI/Aghsat.UI.csproj
@@ -183,25 +183,25 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountController.generated.cs">
+    <Compile Include="T4MVC\AccountController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
-    <Compile Include="Admin.CategoryManagmentController.generated.cs">
+    <Compile Include="T4MVC\Admin.CategoryManagmentController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
-    <Compile Include="Admin.PanelManagmentController.generated.cs">
+    <Compile Include="T4MVC\Admin.PanelManagmentController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
-    <Compile Include="Admin.ProductsManagmentController.generated.cs">
+    <Compile Include="T4MVC\Admin.ProductsManagmentController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
-    <Compile Include="Admin.SharedController.generated.cs">
+    <Compile Include="T4MVC\Admin.SharedController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
-    <Compile Include="Admin.UnitsController.generated.cs">
+    <Compile Include="T4MVC\Admin.UnitsController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
-    <Compile Include="Admin.VehicleManagmentController.generated.cs">
+    <Compile Include="T4MVC\Admin.VehicleManagmentController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -216,7 +216,7 @@
     <Compile Include="Areas\Admin\Controllers\UnitsController.cs" />
     <Compile Include="Areas\Admin\Controllers\VehicleManagmentController.cs" />
     <Compile Include="Areas\Admin\Models\ControllerActions.cs" />
-    <Compile Include="BaseController.generated.cs">
+    <Compile Include="T4MVC\BaseController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Classes\Attributes\IconeAttribute.cs" />
@@ -231,23 +231,23 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="HomeController.generated.cs">
+    <Compile Include="T4MVC\HomeController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Toastr\Toastr.cs" />
     <Compile Include="Services\Toastr\ToastrService.cs" />
     <Compile Include="Services\Toastr\ToastrType.cs" />
-    <Compile Include="SharedController.generated.cs">
+    <Compile Include="T4MVC\SharedController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Startup.cs" />
-    <Compile Include="T4MVC.cs">
+    <Compile Include="T4MVC\T4MVC.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
-    <Compile Include="VehicleController.generated.cs">
+    <Compile Include="T4MVC\VehicleController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
   </ItemGroup>
@@ -552,11 +552,11 @@
     <Content Include="Scripts\_references.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
-    <None Include="T4MVC.tt">
+    <None Include="T4MVC\T4MVC.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>T4MVC.cs</LastGenOutput>
     </None>
-    <None Include="T4MVC.tt.settings.xml" />
+    <None Include="T4MVC\T4MVC.tt.settings.xml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -585,7 +585,7 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <None Include="T4MVC.tt.hooks.t4" />
+    <None Include="T4MVC\T4MVC.tt.hooks.t4" />
     <Content Include="Views\Vehicle\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_AdminMenu.cshtml" />
     <Content Include="Views\Shared\_Slideshow.cshtml" />
