--- a/01.UI/Aghsat.UI/Web.config
+++ b/01.UI/Aghsat.UI/Web.config
@@ -84,9 +84,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="Aghsat" connectionString="Data Sourcce=.;Initial Catalog=Aghsat;Integrated Security=SSPI" providerName="System.Data.SqlClient" />-->
-
-    <add name="Aghsat" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Aghsat;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
+    <add connectionString="Data Source=.;Initial Catalog=Aghsat;Integrated Security=True" name="Aghsat" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.webServer>
     <directoryBrowse enabled="true" />
