--- a/01.UI/Aghsat.UI/Aghsat.UI.csproj
+++ b/01.UI/Aghsat.UI/Aghsat.UI.csproj
@@ -183,7 +183,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Areas\Admin\Controllers\AdminController.cs" />
+    <Compile Include="Classes\AutoMapperConfig\ProductMapping.cs" />
     <Compile Include="T4MVC\AccountController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="T4MVC\Admin.AdminController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="T4MVC\Admin.CategoryManagmentController.generated.cs">
@@ -516,6 +521,7 @@
     <Content Include="App_Code\Customhelper.cshtml" />
     <Content Include="Areas\Admin\Views\ProductsManagment\_CreateProduct.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_ModalAdminLayout.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_ModalMain.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jalaali.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
@@ -597,7 +603,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\Image\" />
+    <Folder Include="Content\Image\ProductsImage\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
