--- a/01.UI/Aghsat.UI/Aghsat.UI.csproj
+++ b/01.UI/Aghsat.UI/Aghsat.UI.csproj
@@ -357,6 +357,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\Custom-datatables.min.js" />
+    <Content Include="Scripts\CustomShowMessage.js" />
     <Content Include="Scripts\CustomScript.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
     <Content Include="Scripts\esm\popper-utils.min.js" />
